--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.1"
+    "@stripe/stripe-js": "^7.3.1",
+    "astro": "^5.9.1",
+    "stripe": "^18.2.1"
   }
 }
